# GALPROP_Local_Sources

./: #gen_DM_source.cc#  ArmData.h  ArraySlice.h  AvXCO.cc  B_field_3D_model.cc  B_field_3D_model.h  B_field_model.cc  Configure.cc  Configure.h  Coordinate.cc  Coordinate.h  D_pp.cc  D_xx.cc  Distribution.cc  Distribution.h  DistributionFunction.cc  DistributionFunction.h  ErrorLogger.cc  ErrorLogger.h  GALPROP_README_updated  GCR_data.cc  GCR_data.h  GalacticRadiationField.cc  GalacticRadiationField.h  Galaxy.cc  Galaxy.h  Galdef.h  Galprop.h  GasEmissFunction.cc  GasFunction.cc  He_to_H_CS.cc  HealpixBaseExtended.cc  HealpixBaseExtended.h  IC_anisotropy_factor.cc  Kcapture_cs.cc  Makefile  Makefile.am  Makefile.in  Particle.cc  Particle.h  (+138 more)
galactic_center/modified/: Galdef.cc  Galdef.h  Particle.cc  Particle.h  create_gcr.cc  electrons_normalize.cc  galdef_54_CheckHypernovaGCNearbySource50ContoursAge250yrsxyz2kpcEcut200GeVEmax10TeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10  galdef_54_HypernovaGC61  galdef_54_HypernovaGC63  gen_DM_source.cc  gen_secondary_source.cc  nH.cc  plot_galpropmodi_GC1.py
galactic_center/modified/examples/: 54_HypernovaGCNearbySource50Age1d1e4_yrsxyz2Rsun0d25Ecut200TeVEmax10PeVExpDecaySx0kpctau10.d  54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVEmin1TeVBurstLikestarttimestep1e2Endstep1e1fac0d25repeat80.d  54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVEmin1TeVBurstLikestarttimestep1e3Endstep1e2fac0d15.d  54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVEmin1TeVExpDecaystarttimestep1e4Tau1e5.d  54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVExpDecaystarttimestep1e4Tau1e2.d  galdef_54_HypernovaGCNearbySource50ContoursAge1d1e4yrsxyz2kpcEcut200TeVEmax10PeVEmin1TeVBurstLikestarttimestep1e2Endstep1e1fac0d25repeat80  galdef_54_HypernovaGCNearbySource50ContoursAge1d1e4yrsxyz2kpcEcut200TeVEmax10PeVEmin1TeVBurstLikestarttimestep1e3Endstep1e2fac0d15  galdef_54_HypernovaGCNearbySource50ContoursAge1d1e4yrsxyz2kpcEcut200TeVEmax10PeVEmin1TeVExpDecaystarttimestep1e4Tau1e5  galdef_54_HypernovaGCNearbySource50ContoursAge1d1e4yrsxyz2kpcEcut200TeVEmax10PeVExpDecay
galactic_center_nonorm/modified/: Galprop.cc  gen_DM_source.cc  nH_fromGAL56.cc  nuclei_normalize.cc  propel.cc
galactic_center_nonorm/modified/examples/: 54_NoNormHypernovaGCNearbySource50Age250yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10TotEn1e51ergindex2d00.d  54_NoNormHypernovaGCNearbySource50Age250yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10TotEn1e51ergindex2d20.d  galdef_54_CheckHypernovaGCNearbySource50ContoursAge250yrsxyz2kpcEcut200TeVEmax10PeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10TotEn1e51ergindex2d00  galdef_54_CheckHypernovaGCNearbySource50ContoursAge250yrsxyz2kpcEcut200TeVEmax10PeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10TotEn1e51ergindex2d20  galdef_54_CheckHypernovaGCNearbySource50ContoursAge250yrsxyz2kpcEcut200TeVEmax10PeVBurstLikestarttimestep3e2Endstep1e1fac0d25repeat10TotEn1e52erg  galdef_54_HypernovaGCNearbySource50ContoursAge1d1e4yrsxyz2kpcEcut200GeVEmax10TeVNoNormEnergy1e52Ergind2d00  startup1.py
galactic_center_nonorm/modified/read_write/: 54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVExpDecaySx0kpcEcutaddedTau1e4.d  54_HypernovaGCNearbySource50Age1d1e4yrs_xyz2Rsun0d25Ecut200TeVEmax10PeVExpDecaySx0kpcEcutaddedTau1e5.d  HNR_Np_esc_n1_check1.txt  HNR_Np_esc_n1_copy.txt  HNR_Np_esc_n1_copy1.txt  HNR_radius_n1 copy.txt  check_HNR_He.py  check_HNR_HeMod.py  elnu_spec_check3DXYZ2EhighTau1e4.d  elnu_spec_check3DXYZ2EhighTau1e5.d  gamma_nu_specplot.ipynb  gamma_spec_check3DXYZ2EhighTau1e4.d  gamma_spec_check3DXYZ2EhighTau1e5.d  gamma_spec_check3DXYZ2EhighTau1e5modnh.d  input_HNR_Galprop.py  interpolate_HNR.py  munu_spec_check3DXYZ2EhighTau1e4.d
galactic_center_readfile/: Galdef.cc  Galdef.h  Galprop.h  Particle.cc  Particle.h  create_gcr.cc  electrons_normalize.cc  gen_DM_source.cc  gen_secondary_source.cc  kamae_includeelneutrino.cc  kamae_includemuneutrino.cc  nuclei_normalize.cc  propel.cc
modifiedsource/: D_xx.cc  D_xxforthreestepdiff.cc  D_xxmultistepdiffusion.cc  D_xxstepdiffusion.cc  Galdef.cc  Galdef.h  Galdefforthreestep.h  Galdefforthreestepdiff.cc  Galdefstepdiffusion.cc  Galdefstepdiffusion.h  propelforthreestepdiff.cc  propelstepdiffusion.cc
proton_en_loss/: En_loss_Proton.ipynb  gas_dist.ipynb
proton_en_loss/.ipynb_checkpoints/: En_loss_Proton-checkpoint.ipynb
